--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-svg-loader",
+  "name": "@umami-dev/vue-svg-loader",
   "description": "Use SVG files as Vue Components",
   "version": "0.16.0",
   "keywords": [
@@ -15,10 +15,13 @@
     "docs:build": "vuepress build docs"
   },
   "bugs": "https://github.com/visualfanatic/vue-svg-loader/issues",
-  "repository": "visualfanatic/vue-svg-loader",
+  "repository": "git@github.com:umami-dev/vue-svg-loader.git",
   "license": "MIT",
   "author": "Damian Stasik <npm@coded.pl>",
   "main": "index.js",
+  "publishConfig": {
+    "@umami-dev:registry": "https://npm.pkg.github.com"
+  },
   "dependencies": {
     "loader-utils": "^2.0.0",
     "svg-to-vue": "^0.7.0"
@@ -28,6 +31,6 @@
     "vuepress": "^1.2.0"
   },
   "peerDependencies": {
-    "vue-template-compiler": "^2.0.0"
+    "vue-template-compiler": "^2.6.0"
   }
 }
